# lpc-fase-2

./: README.md  pyproject.toml
